--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.9"
 astropy = "^5.3.1"
 numpy = "^1.25.0"
 python-casacore = "^3.5.2"
+scipy = "^1.11.1"
+spython = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
