added some scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ isort = "^5.12.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+flint_skymodel = "flint/sky_model:cli"
+flint_aocalibrate = "flint/calibrate/calibrate:cli"
