--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 flint_skymodel = "flint.sky_model:cli"
-flint_aocalibrate = "flint.calibrate.calibrate:cli"
+flint_aocalibrate = "flint.calibrate.aocalibrate:cli"
