--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,4 @@ build-backend = "poetry.core.masonry.api"
 flint_skymodel = "flint.sky_model:cli"
 flint_aocalibrate = "flint.calibrate.aocalibrate:cli"
 flint_flagger = "flint.flagging:cli"
+flint_bandpass = "flint.bandpass:cli"
