--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,4 @@ flint_skymodel = "flint.sky_model:cli"
 flint_aocalibrate = "flint.calibrate.aocalibrate:cli"
 flint_flagger = "flint.flagging:cli"
 flint_bandpass = "flint.bandpass:cli"
+flint_ms = "flint.ms:cli"
