--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fixms = "^0.1.1"
 matplotlib = "*"
 prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
+dask-jobqueue = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
