fixed some doc strings for the docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ matplotlib = "*"
 prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
+sphinx = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
