--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-astropy = "^5.3.1"
-numpy = "^1.25.0"
+python = "^3.8"
+astropy = "^5.0.0"
+numpy = "^1.20.0"
 python-casacore = "^3.5.2"
-scipy = "^1.11.1"
+scipy = "^1.10.0"
 spython = "^0.3.0"
 fixms = "^0.1.1"
 matplotlib = "*"
@@ -22,6 +22,8 @@ prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
 sphinx = "*"
+casatools = "^6.5.3.28"
+casatasks = "^6.5.3.28"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
