--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dask-jobqueue = "*"
 sphinx = "*"
 #casatools = "6.5.3.28"
 casatasks = "6.5.3.28"
+RACS-tools = "^2.2.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
@@ -42,5 +43,6 @@ flint_bandpass = "flint.bandpass:cli"
 flint_ms = "flint.ms:cli"
 flint_wsclean = "flint.imager.wsclean:cli"
 flint_gaincal = "flint.selfcal.casa:cli"
+flint_convol = "flint.convol:cli"
 
 flint_flow_bandpass = "flint.prefect.flows.calibrate:cli"
