added casadata as dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
 sphinx = "*"
-#casatools = "6.5.3.28"
+casadata = "^2023.7.3"
+casatools = "6.5.3.28"
 casatasks = "6.5.3.28"
 RACS-tools = "^2.2.4"
 
