changed file name to continuum_pipeline.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,4 +47,4 @@ flint_gaincal = "flint.selfcal.casa:cli"
 flint_convol = "flint.convol:cli"
 flint_yandalinmos = "flint.coadd.linmos:cli"
 flint_config = "flint.configuration:cli"
-flint_flow_bandpass = "flint.prefect.flows.calibrate:cli"
+flint_flow_bandpass = "flint.prefect.flows.continuum_pipeline:cli"
