--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,4 +49,4 @@ flint_convol = "flint.convol:cli"
 flint_yandalinmos = "flint.coadd.linmos:cli"
 flint_config = "flint.configuration:cli"
 flint_aegean = "flint.source_finding.aegean:cli"
-flint_flow_bandpass = "flint.prefect.flows.continuum_pipeline:cli"
+flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
