--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ casadata = "^2023.7.3"
 casatasks = "6.5.1.23"
 RACS-tools = "^2.2.4"
 aegeantools = "2.3.0"
+pytest = "^7.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
