--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ casatasks = "6.5.1.23"
 RACS-tools = "^2.2.4"
 aegeantools = "2.3.0"
 pytest = "^7.4.0"
+radio-beam = "^0.3.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
