--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,4 +55,5 @@ flint_yandalinmos = "flint.coadd.linmos:cli"
 flint_config = "flint.configuration:cli"
 flint_aegean = "flint.source_finding.aegean:cli"
 flint_validation_plot = "flint.validation:cli"
+flint_masking = "flint.masking:cli"
 flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
