--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ RACS-tools = "^2.2.4"
 aegeantools = "2.3.0"
 pytest = "^7.4.0"
 radio-beam = "^0.3.4"
+reproject = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
