added masking to separate flow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,3 +58,4 @@ flint_aegean = "flint.source_finding.aegean:cli"
 flint_validation_plot = "flint.validation:cli"
 flint_masking = "flint.masking:cli"
 flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
+flint_flow_continuum_mask_pipeline = "flint.prefect.flows.continuum_mask_pipeline:cli"
