--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,6 @@ flint_config = "flint.configuration:cli"
 flint_aegean = "flint.source_finding.aegean:cli"
 flint_validation_plot = "flint.validation:cli"
 flint_masking = "flint.masking:cli"
+flint_flow_bandpass_calibrate = "flint.prefect.flows.bandpass_pipeline:cli"
 flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
 flint_flow_continuum_mask_pipeline = "flint.prefect.flows.continuum_mask_pipeline:cli"
