--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pre-commmit .
+        pip install pytest pre-commit .
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
