--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ black = "^23.3.0"
 mypy = "^1.4.1"
 isort = "^5.12.0"
 pre-commit = "*"
+ruff = "^0.1.12"
 
 [build-system]
 requires = ["poetry-core"]
