--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = "^7.4.0"
 radio-beam = "^0.3.4"
 reproject = "*"
 scikit-image = "*"
+pandas = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
