--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ flint_convol = "flint.convol:cli"
 flint_yandalinmos = "flint.coadd.linmos:cli"
 flint_config = "flint.configuration:cli"
 flint_aegean = "flint.source_finding.aegean:cli"
+flint_leakage = "flint.source_finding.leakage:cli"
 flint_validation_plot = "flint.validation:cli"
 flint_masking = "flint.masking:cli"
 flint_flow_bandpass_calibrate = "flint.prefect.flows.bandpass_pipeline:cli"
