toying around with potatos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ include = [
     {path = 'flint/data/aoflagger/ATCA.lua'},
     {path = 'flint/data/aoflagger/ASKAP.lua'},
     {path = 'flint/data/tests'},
+    {path = 'flint/data/peel/known_sources.csv'}
 ]
 
 [tool.poetry.dependencies]
@@ -64,6 +65,7 @@ flint_config = "flint.configuration:cli"
 flint_aegean = "flint.source_finding.aegean:cli"
 flint_validation_plot = "flint.validation:cli"
 flint_masking = "flint.masking:cli"
+flint_potato = "flint.peel.potato:cli"
 flint_flow_bandpass_calibrate = "flint.prefect.flows.bandpass_pipeline:cli"
 flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
 flint_flow_continuum_mask_pipeline = "flint.prefect.flows.continuum_mask_pipeline:cli"
