--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -26,10 +26,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pre-commit black mypy .
+        pip install pytest pytest-cov pre-commit black mypy .
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
     - name: Test with pytest
       run: |
         pytest
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
