--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -25,8 +25,8 @@ jobs:
         python-version: "3.8"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-cov pre-commit black mypy .
+        python -m pip install --upgrade pip uv
+        uv pip install pytest pytest-cov pre-commit black mypy .
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
