--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip uv
-        uv pip install pytest pytest-cov pre-commit black mypy .
+        uv pip install --system pytest pytest-cov pre-commit black mypy .
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
