--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -32,7 +32,7 @@ jobs:
         pre-commit run --all-files
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
