--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ scikit-image = "*"
 pandas = "*"
 ConfigArgParse = "^1.7"
 fitscube = "^0.4.3"
+astroquery = "^0.4.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
@@ -72,6 +73,7 @@ flint_aocalibrate = "flint.calibrate.aocalibrate:cli"
 flint_archive = "flint.archive:cli"
 flint_flagger = "flint.flagging:cli"
 flint_bandpass = "flint.bandpass:cli"
+flint_catalogues = "flint.catalogue:cli"
 flint_ms = "flint.ms:cli"
 flint_wsclean = "flint.imager.wsclean:cli"
 flint_gaincal = "flint.selfcal.casa:cli"
