fixed types and spelling

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,7 @@ repos:
         args: ["--ignore-missing-imports"]
         additional_dependencies:
           - pytest
+          - types-PyYAML
 
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.3.0"
