--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ include = [
 python = "3.8"
 astropy = "*"
 numpy = "<1.24"
-python-casacore = "*"
 scipy = "*"
 spython = "^0.3.1"
 fixms = ">=0.2.6"
@@ -28,7 +27,7 @@ prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
 casadata = "^2023.7.3"
-#casatools = "6.5.3.28"
+casatools = "*"
 casatasks = "6.5.1.23"
 RACS-tools = "^2.2.4"
 aegeantools = "2.3.0"
