--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ include = [
 [tool.poetry.dependencies]
 python = "3.8"
 astropy = "*"
-numpy = "<1.24"
+numpy = "*"
 python-casacore = "*"
 scipy = "*"
 spython = "^0.3.1"
