--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
 #casatools = "6.5.3.28"
-RACS-tools = "^2.2.4"
+RACS-tools = "*"
 aegeantools = "2.3.0"
 radio-beam = "^0.3.4"
 reproject = "*"
