--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -20,9 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install casacore and boost
         run: |
-          apt install build-essential cmake gfortran g++ libncurses5-dev \
-          libreadline-dev flex bison libblas-dev liblapacke-dev libcfitsio-dev \
-          wcslib-dev libfftw3-dev
+          sudo apt install build-essential cmake gfortran g++ libncurses5-dev libreadline-dev flex bison libblas-dev liblapacke-dev libcfitsio-dev wcslib-dev libfftw3-dev
       - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
