--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install casacore and boost
         run: |
-          sudo apt install build-essential cmake gfortran g++ libboost-all-dev casacore-dev==3.5.0
+          sudo apt install build-essential cmake gfortran g++ libboost-all-dev casacore-dev=3.5.0
       - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
