--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -14,14 +14,17 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.8
+      - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
+      - name: Install casacore and boost
+        run: |
+          sudo apt install -y build-essential libcfitsio-dev liblapack-dev libboost-python-dev python3-dev wcslib-dev casacore-dev
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip uv
