--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "3.12"
+python = "^3.11"
 astropy = "*"
-numpy = "*"
-python-casacore = "*"
+numpy = "^1.26.0"
+python-casacore = "3.5.2" # newer version caused MS errors (maybe related to pre-built wheel)
+pydantic = "2.8.2" # version 2.9.0 caused prefect model validation error
 scipy = "*"
 spython = "^0.3.1"
 fixms = ">=0.2.6"
