--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-astropy = "6.1.0"
+astropy = "6.1.3" # fixing until units change in 6.1.4 addressed in radio-beam
 numpy = "^1.26.0"
 python-casacore = "3.5.2" # newer version caused MS errors (maybe related to pre-built wheel)
 pydantic = "2.8.2" # version 2.9.0 caused prefect model validation error
@@ -28,7 +28,7 @@ matplotlib = "*"
 prefect = "^2.10.0"
 prefect-dask = "^0.2.4"
 dask-jobqueue = "*"
-RACS-tools = "*"
+RACS-tools = { git = "https://github.com/AlecThomson/RACS-tools.git@8e5d919e9938eda19fc7b8a915f855e8b8e0e514" } # allows array of beam shapes in beamcon_3D
 aegeantools = "2.3.0"
 radio-beam = "^0.3.4"
 reproject = "*"
