Initial toying around with subtracted cube

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ flint_potato = "flint.peel.potato:cli"
 flint_leakage = "flint.leakage:cli"
 flint_flow_bandpass_calibrate = "flint.prefect.flows.bandpass_pipeline:cli"
 flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
-flint_flow_continuum_mask_pipeline = "flint.prefect.flows.continuum_mask_pipeline:cli"
+flint_flow_subtract_cube_pipeline = "fline.prefect.flows.subtract_cube_pipeline:cli"
 
 [[tool.mypy.overrides]]
 module = "astropy.*"
