--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,32 @@ target-version = "py38"
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 select = ["E4", "E7", "E9", "F"]
 ignore = []
+# Full list of rules from scientific-python-cookiecutter.
+# More can be enabled as needed / wanted.
+extend-select = [
+    # "B",        # flake8-bugbear
+    "I",        # isort
+    # "ARG",      # flake8-unused-arguments
+    # "C4",       # flake8-comprehensions
+    # "EM",       # flake8-errmsg
+    # "ICN",      # flake8-import-conventions
+    # "G",        # flake8-logging-format
+    # "PGH",      # pygrep-hooks
+    # "PIE",      # flake8-pie
+    # "PL",       # pylint
+    # "PT",       # flake8-pytest-style
+    # "PTH",      # flake8-use-pathlib
+    # "RET",      # flake8-return
+    # "RUF",      # Ruff-specific
+    # "SIM",      # flake8-simplify
+    # "T20",      # flake8-print
+    "UP",       # pyupgrade
+    # "YTT",      # flake8-2020
+    # "EXE",      # flake8-executable
+    "NPY",      # NumPy specific rules
+    "PD",       # pandas-vet
+]
+isort.required-imports = ["from __future__ import annotations"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
