--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,11 @@ repos:
           - pytest
           - types-PyYAML
 
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.29.4
+    hooks:
+      - id: typos
+
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.3.0"
     hooks:
