--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,3 +179,6 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.typos.files]
+extend-exclude = ["*.fits", "flint/data/**/*"]
