--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,4 +181,10 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 
 [tool.typos.files]
-extend-exclude = ["*.fits", "flint/data/**/*"]
+extend-exclude = ["*.fits", "flint/data/**/*", "ignore_words.txt"]
+
+[tool.typos.default.extend-identifiers]
+# Don't correct the surname "Teh"
+FIELDs = "FIELDs"
+FoV = "FoV"
+outweight= "outweight"
