Add dynamic versioning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "flint"
-version = "0.2.9"
+version = "0.0.0" # a placeholder version
+dynamic = ["version"]
 description = "Pipeline for RACS processing, and profit along the way"
 authors = ["tgalvin <tim.galvin@csiro.au>"]
 license = "MIT"
@@ -14,6 +15,12 @@ include = [
     {path = 'flint/data/tests'},
     {path = 'flint/data/peel/known_sources.csv'}
 ]
+
+[tool.poetry-dynamic-versioning]
+enable = true
+
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -62,8 +69,8 @@ dev = [
 
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.scripts]
 flint_skymodel = "flint.sky_model:cli"
