--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,14 @@ include = [
 
 [tool.poetry-dynamic-versioning]
 enable = true
+vcs = "git"
 
 [tool.poetry.requires-plugins]
 poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
+
+[build-system]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -66,11 +71,6 @@ dev = [
     "pytest-cov",
     "sphinx",
 ]
-
-
-[build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
-build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.scripts]
 flint_skymodel = "flint.sky_model:cli"
