--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [tool.poetry]
 name = "flint"
-version = "0.0.0" # a placeholder version
-dynamic = ["version"]
 description = "Pipeline for RACS processing, and profit along the way"
 authors = ["tgalvin <tim.galvin@csiro.au>"]
 license = "MIT"
@@ -15,13 +13,14 @@ include = [
     {path = 'flint/data/tests'},
     {path = 'flint/data/peel/known_sources.csv'}
 ]
+version = "0.0.0" # A placeholder
+
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
-
-[tool.poetry.requires-plugins]
-poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
