--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,7 @@ repos:
     rev: "v1.13.0"
     hooks:
       - id: mypy
-        files: src|tests
+        files: flint|tests
         args: ["--ignore-missing-imports"]
         additional_dependencies:
           - pytest
