--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,15 +30,15 @@ dynamic = ["version"]
 
 dependencies = [
     "astropy>=6.1.3", # fixing until units change in 6.1.4 addressed in radio-beam
-    "numpy>=1.26.0, <2",
-    "pydantic==2.8.2", # version 2.9.0 caused prefect model validation error
+    "numpy>=2.0.0",
+    "pydantic",
     "scipy",
     "spython>=0.3.1",
     "matplotlib",
     "prefect>=2.10.0, <3",
     "prefect-dask>=0.2.4",
     "dask-jobqueue",
-    "RACS-tools @ git+https://github.com/AlecThomson/RACS-tools.git@8e5d919e9938eda19fc7b8a915f855e8b8e0e514", # allows array of beam shapes in beamcon_3D
+    "RACS-tools>=4.2.1",
     "aegeantools==2.3.0",
     "radio-beam>=0.3.4",
     "reproject",
@@ -47,6 +47,7 @@ dependencies = [
     "ConfigArgParse>=1.7",
     "fitscube>=0.5.0",
     "astroquery>=0.4.8.dev0",
+    "crystalball @ git+https://github.com/caracal-pipeline/crystalball.git@78f087b",
 ]
 
 [tool.hatch]
@@ -71,7 +72,10 @@ dev = [
     "sphinx-autoapi",
     "furo"
 ]
-casa =["python-casacore==3.5.2", "fixms>=0.2.6"]
+casa =[
+    "python-casacore>=3.6.0",
+    "fixms>=0.4.0"
+]
 
 [project.scripts]
 flint_skymodel = "flint.sky_model:cli"
